--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 # REACT_APP_API_ENDPOINT=http://localhost:8000/
-REACT_APP_API_ENDPOINT=http://api.exam.zan.com.bd/
-REACT_APP_API_SERVER=http://api.exam.zan.com.bd/
+# REACT_APP_API_ENDPOINT=http://192.168.68.110:8000/
+# REACT_APP_API_SERVER=http://192.168.68.110:8000/
+REACT_APP_API_ENDPOINT=http://api.exam.zan.com.bd/public/
+REACT_APP_API_SERVER=http://api.exam.zan.com.bd/public/
