--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.15.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
